--- a/task_4/nginx/content/index.html
+++ b/task_4/nginx/content/index.html
@@ -16,6 +16,8 @@
     <li><a href="cars.php">Список доступных автомобилей</a></li>
     <li><a href="services.php">Список сервисов</a></li>
     <li><a href="admin/admin.php">Страница администратора</a></li>
+    <li><a href="individual_session_content.php">Адаптивная страница</a></li>
+    <li><a href="files.php">Сервис файловый</a></li>
 </ul>
 </body>
 </html>
